--- a/templates/dot.html
+++ b/templates/dot.html
@@ -2,6 +2,34 @@
 <html>
 <head>
 	<title>Braille information for {{ dot_word }}</title>
+
+<meta charset="utf8">
+<style type="text/css">
+
+ul.translations > li {
+	display: block;
+	width: 20em;
+	text-align: center;
+	float: left;
+	min-height: 4em;
+	margin-bottom: 0.3em;
+}
+
+ul.translations > li > em {
+	font-size: 200%;
+}
+
+ul.translations > li > div.detail {
+	font-size: 60%;
+}
+
+table.layout td{
+	margin: 0;
+	padding: 0;
+}
+
+</style>
+
 </head>
 <body>
 
@@ -25,11 +53,15 @@
 </table>
 </div>
 
-<ul>
+<h2>Translations</h2>
+
+<ul class="translations">
 {% for abc in rules_by_abc %}
 	<li>
 	<em>{{ abc.abc }}</em>
-	({% for rule in abc.rules %}<dfn title="{{ rule.table }}: {{ rule.opcode }}">{{ rule.locale }}</dfn>{% if not loop.last %}, {% endif %}{% endfor %})
+	<div class="detail">
+		{% for rule in abc.rules %}<dfn title="{{ rule.table }}: {{ rule.opcode }}">{{ rule.locale }}</dfn>{% if not loop.last %}, {% endif %}{% endfor %}
+	</div>
 	</li>
 {% endfor %}
 </ul>
