--- a/templates/dot.html
+++ b/templates/dot.html
@@ -82,5 +82,9 @@ table.layout:hover tr.hide-8dot {
 {% endfor %}
 </ul>
 
+<h2>About</h2>
+
+This page shows data from <a href="http://liblouis.org/">liblouis</a>, which is licensed under the <a href="https://www.gnu.org/licenses/gpl-3.0.txt">GPLv3</a>.
+
 </body>
 </html>
